# pcapml

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure  configure.ac  go.mod  go.sum  main.go
.github/ISSUE_TEMPLATE/: config.yml
bpf/: gateway.bpf.c  pcapml.bpf.c
bpf/headers/: bpf_types.h
cmd/: capture_common.go  capture_common_test.go  capture_ebpf.go  capture_ebpf_nohost.go  capture_gateway.go  capture_stub.go  cgroup_resolve.go  compare.go  compare_test.go  gateway_arm64_bpfel.go  gateway_mips_bpfeb.go  gateway_x86_bpfel.go  gen.go  integration_test.go  label.go  label_stub.go  label_test.go  quic.go  quic_test.go  resolve.go  resolve_test.go  root.go  sort.go  split.go  strip.go  summary.go  summary_test.go  vantage.go
include/: util.hpp
include/dir/: dir.hpp
include/label/: dir.hpp  label.hpp  labeler.hpp  pcap_labeler.hpp
include/pcap/: pcap_reader.hpp  pcap_writer.hpp  reader_pcap.hpp  writer_pcap.hpp
include/pcapng/: block.hpp  block_pcapng.hpp  pcapng_reader.hpp  pcapng_sorter.hpp  pcapng_splitter.hpp  pcapng_writer.hpp  reader_pcapng.hpp  sorter_pcapng.hpp  splitter_pcapng.hpp  stripper_pcapng.hpp  writer_pcapng.hpp
include/sample/: sample.hpp  sampler.hpp
internal/pcap/: writer.go  writer_test.go
internal/pcapng/: reader.go  reader_test.go  writer.go  writer_test.go
pypcapml/: example.py  pcapml_pymod.cpp  setup.py
python/: .gitignore  README.md  pyproject.toml
python/src/pcapml/: __init__.py  _decode.py  _pcapng.py  reader.py
python/tests/: test_reader.py
python/tests/data/: keyed.pcapng  legacy.pcapng
src/: pcapml.cpp  util.cpp
src/dir/: dir.cpp
src/label/: dir.cpp  label.cpp  labeler.cpp  pcap_labeler.cpp
src/pcap/: pcap_reader.cpp  pcap_writer.cpp  reader_pcap.cpp  writer_pcap.cpp
src/pcapng/: block.cpp  block_pcapng.cpp  pcapng_reader.cpp  pcapng_sorter.cpp  pcapng_splitter.cpp  pcapng_writer.cpp  reader_pcapng.cpp  sorter_pcapng.cpp  splitter_pcapng.cpp  stripper_pcapng.cpp  writer_pcapng.cpp
src/sample/: sample.cpp  sampler.cpp
test/dir-test/sample/: labels.txt
test/dir-test/sample/pcaps/: ubuntu_chrome_discord_230.pcap  ubuntu_chrome_discord_316.pcap  ubuntu_chrome_discord_325.pcap  ubuntu_chrome_discord_420.pcap  ubuntu_chrome_discord_435.pcap  ubuntu_chrome_discord_676.pcap  ubuntu_chrome_discord_684.pcap  ubuntu_chrome_discord_716.pcap  ubuntu_chrome_discord_821.pcap  ubuntu_chrome_discord_875.pcap  ubuntu_chrome_discord_879.pcap  ubuntu_chrome_discord_900.pcap  ubuntu_chrome_facebook_1077.pcap  ubuntu_chrome_facebook_1105.pcap  ubuntu_chrome_facebook_1264.pcap  ubuntu_chrome_facebook_1367.pcap  ubuntu_chrome_facebook_291.pcap  ubuntu_chrome_facebook_37.pcap  ubuntu_chrome_facebook_426.pcap  ubuntu_chrome_facebook_478.pcap  ubuntu_chrome_facebook_493.pcap  ubuntu_chrome_facebook_532.pcap  ubuntu_chrome_facebook_548.pcap  ubuntu_chrome_facebook_63.pcap  ubuntu_chrome_facebook_795.pcap  ubuntu_chrome_facebook_81.pcap  ubuntu_chrome_facebook_83.pcap  ubuntu_chrome_facebook_866.pcap  ubuntu_chrome_facebook_879.pcap  ubuntu_chrome_facebook_888.pcap  ubuntu_chrome_facebook_930.pcap  ubuntu_chrome_google_192.pcap  ubuntu_chrome_google_382.pcap  (+63 more)
test/e2e/: test.py
test/label-test/: labels.txt  test.pcap
test/sort-test/: test.pcapng
